inmemory file system for tracing files